# gl-playground

./: .gitignore  meson.build
data/: meson.build
data/shaders/: frag.glsl  meson.build  vert.glsl
data/textures/: meson.build
examples/: main.c  meson.build
include/: file.h  game.h
include/core/: game.h
include/render/: index-buffer.h  render-object.h  renderer.h  shader.h  texture.h  vertex-array.h  vertex-buffer.h
include/sephine/: sephine.h
include/sephine/core/: game.h  log.h
include/sephine/render/: renderer.h  texture.h
src/: file.c  game.c  main.c  meson.build
src/core/: file.c  game.c  meson.build
src/render/: index-buffer.c  meson.build  render-object.c  renderer.c  shader.c  texture.c  vertex-array.c  vertex-buffer.c
subprojects/: cglm.wrap  tts.wrap
